# discord_community_ncl

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.ai/: CURRENT_PLAN.MD  ERRORS.MD  MEMORY.MD
.github/workflows/: ci.yml
docs/: PRD.md  roadmap.md
docs/architecture/ADRs/: ADR-001-tech-stack.md  ADR-002-database-strategy.md  ADR-003-deployment.md
docs/architecture/rules/: db_rules.md  project_structure.md  stack_rules.md
docs/deployment/: railway.md
src/: config.py
src/cogs/: activity.py  audit.py  presence.py  tickets.py
src/dashboard/: app.py
src/database/: client.py
src/models/: schemas.py
src/services/: activity_service.py  ai_service.py  dashboard_service.py  presence_service.py  ticket_service.py
tests/: test_activity_service.py  test_schemas.py
